--- a/engine-server/Gemfile
+++ b/engine-server/Gemfile
@@ -7,9 +7,7 @@ end
 
 gem "pry"
 gem "pry-nav"
-gem "eventmachine"
-gem "faye-websocket"
-
+gem 'websocket-client-simple', '~> 0.3.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.1.4'
 # Use postgresql as the database for Active Record
