Added kraken ruby gem. Just need to create database entries

--- a/engine-server/Gemfile
+++ b/engine-server/Gemfile
@@ -8,6 +8,9 @@ end
 gem "pry"
 gem "pry-nav"
 gem 'websocket-client-simple'
+gem 'kraken_ruby'
+
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.0.rc1'
 # Use postgresql as the database for Active Record
