--- a/engine-server/Gemfile
+++ b/engine-server/Gemfile
@@ -9,7 +9,7 @@ gem "pry"
 gem "pry-nav"
 gem 'websocket-client-simple'
 gem 'kraken_ruby'
-
+gem "rufus-scheduler"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.0.rc1'
